--- a/package.json
+++ b/package.json
@@ -20,7 +20,13 @@
     "mongodb": "^6.13.0"
   },
   "devDependencies": {
-    "nodemon": "^3.1.9"
+    "@eslint/js": "^9.20.0",
+    "eslint": "^9.20.1",
+    "eslint-config-prettier": "^10.0.1",
+    "eslint-plugin-html": "^8.1.2",
+    "globals": "^15.14.0",
+    "nodemon": "^3.1.9",
+    "prettier": "^3.5.0"
   },
   "engines": {
     "node": ">=14.0.0"
