--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js",
-    "build": "echo 'No build required'"
+    "build": "echo 'No build required'",
+    "lint": "eslint . ",
+    "lint:fix": "eslint . --fix"
   },
   "keywords": [],
   "author": "",
